<resources>

    <!--  -->
    <string name="app_name">Stanley</string>
    <string name="app_name_full">Stanley (Android Package Explorer)</string>

    <!--  -->
    <string name="title_main">Stanley</string>
    <string name="title_package">Stanley - %1$s</string>
    <string name="title_settings">Stanley - Settings </string>
    <string name="title_about">Stanley#8230; </string>
    <string name="title_secret">Stanley - Secret options</string>

    <!-- Options Menu in Apex -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>

    <!-- Actions -->
    <string name="action_sort">Sort</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_package">Sort by package</string>
    <string name="action_sort_by_install">Last installed first</string>
    <string name="action_sort_by_update">Last updated first</string>
    <string name="action_export">Export manifest</string>
    <string name="action_export_apk">Export APK</string>
    <string name="action_explore_resources">Explore resources</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_display_info">System App Info</string>
    <string name="action_display_store">Google Play Store</string>
    <string name="action_open">Open</string>
    <string name="action_switch_background">Switch resources background color</string>
    <string name="action_zoom_in">Zoom in</string>
    <string name="action_zoom_out">Zoom out</string>
    <string name="action_zoom_reset">Reset Zoom</string>

    <!-- Misc UI -->
    <string name="ui_package_hint">Package name</string>

</resources>