<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <item
        android:id="@id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"/>
         -->
    <item
        android:id="@id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:showAsAction="ifRoom"
        android:title="@string/action_sort">
        <menu>
            <item
                android:id="@id/action_sort_by_name"
                android:title="@string/action_sort_by_name"/>
            <item
                android:id="@id/action_sort_by_package"
                android:title="@string/action_sort_by_package"/>
            <item
                android:id="@id/action_sort_by_install"
                android:title="@string/action_sort_by_install"/>
            <item
                android:id="@id/action_sort_by_update"
                android:title="@string/action_sort_by_update"/>
        </menu>
    </item>
    <item
        android:id="@id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>
    <item
        android:id="@id/action_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/menu_about"/>

</menu>