<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/action_display_info"
        android:icon="@drawable/ic_action_info"
        android:showAsAction="ifRoom"
        android:title="@string/action_display_info"/>
    <item
        android:id="@id/action_display_store"
        android:icon="@drawable/ic_action_playstore"
        android:showAsAction="ifRoom"
        android:title="@string/action_display_store"/>
    <item
        android:id="@+id/action_export_manifest"
        android:icon="@drawable/ic_action_export"
        android:showAsAction="ifRoom"
        android:title="@string/action_export"/>
    <item
        android:id="@+id/action_explore_resources"
        android:icon="@drawable/ic_action_explore"
        android:showAsAction="ifRoom"
        android:title="@string/action_explore_resources"/>

    <group android:id="@+id/group_installed_apps" >
        <item
            android:id="@+id/action_uninstall"
            android:icon="@drawable/ic_action_uninstall"
            android:showAsAction="ifRoom"
            android:title="@string/action_uninstall"/>
    </group>

</menu>